// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLink /> renders with dropdown menu 1`] = `
<div
  className="DropdownLink__wrapper"
>
  <div
    className="DropdownLink"
    data-test-nav-link={true}
    onClick={[MockFunction]}
  >
    <div
      className="DropdownLink__text-wrapper"
    >
      <div
        className="DropdownLink__text"
      >
        Elon Musk
      </div>
      <div
        className="DropdownLink__subtext"
      >
        Viljatootja AS
      </div>
    </div>
    <i
      className="material-icons-outlined DropdownLink__icon"
    >
      settings
    </i>
  </div>
  <OutsideClicker />
  <Animator
    className="DropdownAnimator"
    isMounted={true}
  >
    <DropdownMenu />
  </Animator>
</div>
`;

exports[`<DropdownLink /> renders without dropdown menu 1`] = `
<div
  className="DropdownLink__wrapper"
>
  <div
    className="DropdownLink"
    data-test-nav-link={true}
    onClick={[MockFunction]}
  >
    <div
      className="DropdownLink__text-wrapper"
    >
      <div
        className="DropdownLink__text"
      >
        Elon Musk
      </div>
      <div
        className="DropdownLink__subtext"
      >
        Viljatootja AS
      </div>
    </div>
    <i
      className="material-icons-outlined DropdownLink__icon"
    >
      settings
    </i>
  </div>
  <Animator
    className="DropdownAnimator"
    isMounted={false}
  >
    <DropdownMenu />
  </Animator>
</div>
`;
